--- a/frontend/src/app/app.scss
+++ b/frontend/src/app/app.scss
@@ -28,3 +28,27 @@
 .button-escolha button span:hover{
   color: #f28444;
 }
+
+.persson{
+  color: white;
+  cursor: pointer;
+  font-size: 26px;
+}
+.persson:hover{
+  color: #f28444;
+}
+
+.persson-item{
+  color: black;
+}
+.persson-item:hover{
+  color: #f28444;
+  background-color: black;
+}
+
+.cart{
+  color: white;
+}
+.cart:hover{
+  color: #f28444;
+}
