--- a/frontend/src/app/app.scss
+++ b/frontend/src/app/app.scss
@@ -1,8 +1,12 @@
-
-.spacer {
-  flex: 1 1 auto;
+.toolbar{
+  background-color: black;
+  display: flex;
+  align-items: center;
+  padding: 0 20px;
+  gap: 20px;
 }
 
+//Título//
 .title{
   font-family: 'Arial', sans-serif; /* muda a fonte */
   font-size: 30px;                  /* tamanho da letra */
@@ -12,43 +16,88 @@
   text-shadow: 2px 2px 4px rgba(0,0,0,0.3); /* sombra */
 }
 
-.toolbar{
-  background-color: black;
+//Butões que estão no meio//
+.button-escolha {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 40px;
+  flex: 1;   /* ocupa o meio da toolbar */
 }
-
+//Butões que estão no meio//
 .button-escolha button {
   background: none;
   border: none;
-  margin-right: 200px;
   cursor: pointer;
   color: white;
   font-size: 16px;
 }
-
+//Butões que estão no meio//
 .button-escolha button span:hover{
   color: #f28444;
 }
 
-.persson{
+// Icones (peesoa + carrinho)
+.icones-escolha{
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+
+.persson, .cart{
   color: white;
   cursor: pointer;
   font-size: 26px;
 }
-.persson:hover{
+
+
+.persson:hover, .persson-item:hover,.cart:hover {
   color: #f28444;
 }
 
 .persson-item{
   color: black;
 }
-.persson-item:hover{
-  color: #f28444;
-  background-color: black;
+
+
+
+.footer {
+  background-color: #222;
+  color: white;
+  padding: 30px 20px;
+  font-size: 14px;
 }
 
-.cart{
-  color: white;
+.footer-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  gap: 30px;
 }
-.cart:hover{
-  color: #f28444;
+
+.footer-bottom {
+  border-top: 1px solid #444;
+  margin-top: 20px;
+  padding-top: 10px;
+  text-align: center;
+  font-size: 12px;
+  color: #aaa;
 }
+
+.payment-icons img{
+  width: 30px;   /* largura da imagem */
+  height: 30px;  /* mantém proporção */
+  margin-right: 10px;
+  object-fit: contain; /* mantém proporção sem cortar */
+
+}
+
+.payment-icons {
+  margin-left: 40px;
+}
+
+
+
+
+
