--- a/frontend/src/app/home/home.html
+++ b/frontend/src/app/home/home.html
@@ -2,6 +2,34 @@
     <div class="imagens-container">
         <div class = "imagem1"> <img src = "https://m.media-amazon.com/images/I/71n5E-Y3dzL._AC_SL1200_.jpg"></div>
         <div class = "imagem2"> <img src ="https://p2.trrsf.com/image/fget/cf/1200/630/middle/images.terra.com/2024/05/13/107600214-lana-del-rey-umg-2-jpg.jpg"> </div>
+        <div class="banner-text">
+          <h1>A SUA HORA</h1>
+          <h1>DE CURTIR</h1>
+          <h1>SUAS MÚSICAS</h1>
+          <button class ="banner-button" routerLink="/loja">COMPRE JÁ</button>
+        </div>
+    </div>
+    <div class="features">
+      <div class="feature">
+        <mat-icon>local_shipping</mat-icon> <!-- carrinho/caminhão -->
+        <span><br>FRETE GRÁTIS</span>
+        <span><br>Confira Condições</span>
+      </div>
+      <div class="feature">
+        <mat-icon> location_on</mat-icon> <!-- Localização-->
+        <span><br>ENVIAMOS</span>
+        <span><br>para todo Brasil</span>
+      </div>
+      <div class="feature">
+        <mat-icon>credit_card</mat-icon> <!-- cartão -->
+        <span><br>ATÉ 12X SEM JUROS</span>
+        <span><br>10% Off no Boleto</span>
+      </div>
+      <div class="feature">
+        <mat-icon>lock</mat-icon> <!-- cadeado -->
+        <span><br>100% SEGURO</span>
+        <span><br>Certificado SSL</span>
+      </div>
     </div>
 </body>
 
