--- a/frontend/src/app/home/home.html
+++ b/frontend/src/app/home/home.html
@@ -31,5 +31,15 @@
         <span><br>Certificado SSL</span>
       </div>
     </div>
+
+    <div class="produtos">
+  <h1>Produtos mais comprados</h1>
+  <div class="produtos-lista">
+    <div class="produto-card"></div>
+    <div class="produto-card"></div>
+    <div class="produto-card"></div>
+    <div class="produto-card"></div>
+  </div>
+</div>
 </body>
 
