--- a/frontend/src/app/home/home.scss
+++ b/frontend/src/app/home/home.scss
@@ -28,9 +28,6 @@ body{
   text-align: center;
 }
 
-
-
-
 .banner {
   position: relative;
   width: 100%;
@@ -68,4 +65,34 @@ body{
   font-size: 16px;
   text-shadow: 1px 1px 4px #000;
 
+}
+
+
+.produtos, h1{
+  text-align: center;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+
+.produtos {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 40px 20px;
+  text-align: center;
+}
+
+.produtos-lista {
+  display: flex;
+  gap: 40px;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.produto-card {
+  width: 200px;
+  height: 300px; /* cor de placeholder */
+  border: 1px solid;
+  border-radius: 8px;
 }
