--- a/frontend/src/app/produto-info/produto-info/produto-info.html
+++ b/frontend/src/app/produto-info/produto-info/produto-info.html
@@ -1,1 +1,42 @@
-<p>produto-info works!</p>
+<main>
+  <div class="container">
+    <div class="grid second-nav">
+      <div class="column-xs-12">
+        <nav>
+          <ol class="breadcrumb-list">
+            <li class="breadcrumb-item"><a href="#">Home</a></li>
+            <li class="breadcrumb-item"><a href="#">Loja</a></li>
+            <li class="breadcrumb-item active">Album</li>
+          </ol>
+        </nav>
+      </div>
+    </div>
+    <div class="grid product">
+      <div class="column-xs-12 column-md-7">
+        <div class="product-gallery">
+          <div class="product-image">
+            <img class="active" src="https://source.unsplash.com/W1yjvf5idqA">
+          </div>
+
+        </div>
+      </div>
+      <div class="column-xs-12 column-md-5">
+        <h1>Bonsai</h1>
+        <h2>$19.99</h2>
+        <div class="description">
+          <p>Discrição</p>
+        </div>
+        <button class="add-to-cart">Adicionar no carrinho</button>
+      </div>
+    </div>
+
+
+    <div class="grid related-products">
+      <div class="column-xs-12">
+        <h3>Você tambem pode gostar</h3>
+      </div>
+
+    </div>
+  </div>
+</main>
+
