refactor: movendo componentes para pastas de pedidos e produtos naa area adm

--- a/frontend/src/app/Area-Adm/area-adm/area-adm.html
+++ b/frontend/src/app/Area-Adm/area-adm/area-adm.html
@@ -55,10 +55,10 @@
     </div>
 
       <!-- Visualizar detalhes do Pedido  -->
-    <div class="admin-card" id="visualizarDetalhesProdutos">
-      <h3>Visualizar Datalhes do Pedidos</h3>
+    <div class="admin-card" id="visualizarDetalhesPedido">
+      <h3>Visualizar Datalhes do Pedido</h3>
       <p>Visualize itens, quantidades, valor total, cliente e status do pedido.</p>
-      <button routerLink="visualizarDetalhesProdutos">Ver Detalhes</button>
+      <button routerLink="visualizarDetalhesPedido">Ver Detalhes</button>
     </div>
   </div>
 
