feat(editar) criando logica de que ao escrever o nome do produto sempre vai começar com letra maiuscula

--- a/frontend/src/app/area-adm/produtos/editar-produto/editar-produto.html
+++ b/frontend/src/app/area-adm/produtos/editar-produto/editar-produto.html
@@ -44,7 +44,8 @@
 
       <mat-form-field appearance="outline">
         <mat-label>Nome</mat-label>
-        <input matInput [(ngModel)]="produtoSelecionado!.nome">
+        <input matInput [(ngModel)]="produtoSelecionado!.nome"
+        (ngModelChange)="produtoSelecionado!.nome = capitalizeFirstLetter(produtoSelecionado!.nome)">
       </mat-form-field>
 
       <mat-form-field appearance="outline">
