feat(gerenciar-genero) atualizado e testado

--- a/frontend/src/app/area-adm/genero-musical/gerenciar-genero-musical/gerenciar-genero-musical.html
+++ b/frontend/src/app/area-adm/genero-musical/gerenciar-genero-musical/gerenciar-genero-musical.html
@@ -6,14 +6,15 @@
   <form class="form" (ngSubmit)="onSave()">
     <mat-form-field appearance="outline" class="campo">
       <mat-label>Nome do gênero</mat-label>
-      <input matInput [(ngModel)]="generoForm.name" name="name" required>
+      <input matInput [(ngModel)]="generoForm.name" name="name" required
+      (ngModelChange)="generoForm.name = capitalizeFirstLetter(generoForm.name)">
     </mat-form-field>
 
     <div class="actions-form">
-      <button mat-raised-button color="primary" type="submit">
+      <button class = "button-color" mat-raised-button color="primary" type="submit">
         {{ generoForm.id ? 'Salvar Alterações' : 'Adicionar Gênero' }}
       </button>
-      <button mat-stroked-button color="warn" type="button" (click)="onCancel()" *ngIf="generoForm.id">
+      <button class = "button-color" mat-raised-button color="warn" type="button" (click)="onCancel()" *ngIf="generoForm.id">
         Cancelar
       </button>
     </div>
@@ -27,17 +28,17 @@
       <td mat-cell *matCellDef="let genero"> {{ genero.name }} </td>
     </ng-container>
 
-    <ng-container matColumnDef="acoes">
-      <th mat-header-cell *matHeaderCellDef> Ações </th>
-      <td mat-cell *matCellDef="let genero">
-        <button mat-icon-button color="primary" (click)="onEdit(genero)">
-          <mat-icon>edit</mat-icon>
-        </button>
-        <button mat-icon-button color="warn" (click)="onRemove(genero.id)">
-          <mat-icon>delete</mat-icon>
-        </button>
-      </td>
-    </ng-container>
+    <ng-container matColumnDef="acoes" class="acoes">
+  <th mat-header-cell *matHeaderCellDef class="acoes"> Ações </th>
+  <td mat-cell *matCellDef="let genero" class="acoes">
+    <button  class = "button-color" mat-icon-button color="primary" (click)="onEdit(genero)">
+      <mat-icon>edit</mat-icon>
+    </button>
+    <button  class = "button-color"  mat-icon-button color="warn" (click)="onRemove(genero.id)">
+      <mat-icon>delete</mat-icon>
+    </button>
+  </td>
+</ng-container>
 
     <tr mat-header-row *matHeaderRowDef="['name','acoes']"></tr>
     <tr mat-row *matRowDef="let row; columns: ['name','acoes'];"></tr>
