--- a/frontend/src/app/area-adm/genero-musical/gerenciar-genero-musical/gerenciar-genero-musical.scss
+++ b/frontend/src/app/area-adm/genero-musical/gerenciar-genero-musical/gerenciar-genero-musical.scss
@@ -36,3 +36,17 @@ mat-icon {
   vertical-align: middle;
 }
 
+td.acoes, th.acoes {
+  text-align: right; /* Alinha o conteúdo da coluna à direita */
+  padding-right: 16px; /* Ajuste se quiser mais espaço da borda */
+}
+
+td.acoes button {
+  margin-left: 8px; /* Espaço entre os botões */
+}
+
+.button-color{
+   color: #f28444 !important;
+}
+
+
