--- a/frontend/src/app/area-adm/produtos/cadastrar-produto/cadastrar-produto.html
+++ b/frontend/src/app/area-adm/produtos/cadastrar-produto/cadastrar-produto.html
@@ -1,46 +1,56 @@
+<app-navbar-interno-adm></app-navbar-interno-adm>
+
 <div class="container">
   <h1>Cadastrar Produto</h1>
 
-  <form class="form">
+  <form class="form" (ngSubmit)="onSalvarProduto()">
     <mat-form-field appearance="outline" class="campo">
       <mat-label>Nome do produto</mat-label>
-      <input matInput>
+      <input matInput [(ngModel)]="produto.nome" name="nome" required
+      (ngModelChange)="produto.nome = capitalizeFirstLetter(produto.nome)">
     </mat-form-field>
 
     <mat-form-field appearance="outline" class="campo">
       <mat-label>Preço</mat-label>
-      <input matInput type="number" min="0" step="0.01">
+      <input matInput type="number" min="0" step="1" [(ngModel)]="produto.preco" name="preco" required>
     </mat-form-field>
 
     <mat-form-field appearance="outline" class="campo">
       <mat-label>Descrição</mat-label>
-      <textarea matInput rows="4"></textarea>
+      <textarea matInput rows="4" [(ngModel)]="produto.descricao" name="descricao" required></textarea>
     </mat-form-field>
 
     <mat-form-field appearance="outline" class="campo">
-  <mat-label>Categoria</mat-label>
-  <mat-select>
-    <mat-option *ngFor="let genero of generos$ | async" [value]="genero.id">
-      {{ genero.name }}
-    </mat-option>
-  </mat-select>
-</mat-form-field>
+      <mat-label>Gênero Musical</mat-label>
+      <mat-select  (selectionChange)="onSelecionarGenero($event.value)" [value]="produto.generoMusical" required>
+        <mat-option class = "color" *ngFor="let genero of generos$ | async" [value]="genero" >
+          {{ genero.name }}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
 
     <mat-form-field appearance="outline" class="campo">
       <mat-label>Estoque</mat-label>
-      <input matInput type="number">
+      <input matInput type="number" min="0" step="1" [(ngModel)]="produto.estoque" name="estoque" required>
     </mat-form-field>
 
-    <div class="upload">
-      <label class="label-upload">
-        <mat-icon>photo_camera</mat-icon>
-        Selecionar imagem
-        <input type="file" hidden>
-      </label>
-    </div>
+<div class="upload">
+  <label class="label-upload">
+    <mat-icon>photo_camera</mat-icon>
+    Selecionar imagem
+    <input type="file" hidden (change)="onFileSelected($event)">
+  </label>
+</div>
 
-    <button mat-raised-button color="primary" class="btn-salvar">
-      Salvar Produto
-    </button>
+<!-- Preview da imagem -->
+<div class="preview-imagem" *ngIf="imagemPreview">
+  <img [src]="imagemPreview" alt="Preview da Imagem">
+</div>
+
+<button mat-raised-button class = "button-color" color="primary" type="button" (click)="onSalvarProduto()">
+  Salvar Produto
+</button>
+
   </form>
 </div>
+
