Nomes de Componentes e serviços
Ajustando essa parte pois estava dando conflito, alguns nomes estavam os mesmos e algumas versões podem da conflitos por conta disso.

--- a/frontend/src/app/login/login.html
+++ b/frontend/src/app/login/login.html
@@ -8,6 +8,9 @@
     </form>
 
     <p class="cadastro-link">
+      É adm? <a routerLink="/login-adm">Logar como Adm</a>
+    </p>
+    <p class="cadastro-link">
       Ainda não tem conta? <a routerLink="/cadastro">Cadastre-se</a>
     </p>
   </div>
