Area para Adm logar

--- a/frontend/src/app/login/login.html
+++ b/frontend/src/app/login/login.html
@@ -8,7 +8,7 @@
     </form>
 
     <p class="cadastro-link">
-      É adm? <a routerLink="/login-adm">Logar como Adm</a>
+      É adm? <a routerLink="/loginAdm">Logar como Adm</a>
     </p>
     <p class="cadastro-link">
       Ainda não tem conta? <a routerLink="/cadastro">Cadastre-se</a>
