--- a/frontend/src/app/area-adm/genero-musical/gerenciar-genero-musical/gerenciar-genero-musical.html
+++ b/frontend/src/app/area-adm/genero-musical/gerenciar-genero-musical/gerenciar-genero-musical.html
@@ -25,7 +25,7 @@
 
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef> Nome </th>
-      <td mat-cell *matCellDef="let genero"> {{ genero.name }} </td>
+      <td mat-cell *matCellDef="let genero"> {{ genero.nome }} </td>
     </ng-container>
 
     <ng-container matColumnDef="acoes" class="acoes">
