--- a/frontend/src/app/area-adm/produtos/editar-produto/editar-produto.html
+++ b/frontend/src/app/area-adm/produtos/editar-produto/editar-produto.html
@@ -19,6 +19,7 @@
 
       <div class="produto-info">
         <h3>{{ produto.nome }}</h3>
+        <p><strong>Artista:</strong> {{ produto.artista }}</p>
         <p><strong>Preço:</strong> R$ {{ produto.preco | number:'1.2-2' }}</p>
         <p><strong>Gênero Musical:</strong> </p>
         <p><strong>Estoque:</strong> {{ produto.estoque }}</p>
