--- a/frontend/src/app/loja/card-produto-loja/card-produto-loja.html
+++ b/frontend/src/app/loja/card-produto-loja/card-produto-loja.html
@@ -4,7 +4,7 @@
       <img [src]="produto.imagemUrl" [alt]="produto.nome">
 
       <!-- BOTÃO FLUTUANTE -->
-      <button class="buy-btn" (click)="adicionarCarrinho(produto)">
+      <button class="buy-btn">
         <i class="material-icons">add_shopping_cart</i>
       </button>
     </div>
@@ -23,6 +23,3 @@
     </div>
   </div>
 </div>
-
-
-
