--- a/frontend/src/app/loja/card-produto-loja/card-produto-loja.html
+++ b/frontend/src/app/loja/card-produto-loja/card-produto-loja.html
@@ -13,7 +13,7 @@
       <div class="details">
         <h2>{{ produto.nome }}</h2>
         <p>Artista: {{ produto.artista }}</p>
-        <p>Genero: </p>
+        <p>Genero:{{ produto.generoMusical.nome }} </p>
 
         <p>R$ {{ produto.preco.toFixed(2) }}</p>
 
