Pagina produto-info
Redirecionando a partir do card produto, para a pagina com mais informações sobre esse produto.

--- a/frontend/src/app/loja/card-produto-loja/card-produto-loja.scss
+++ b/frontend/src/app/loja/card-produto-loja/card-produto-loja.scss
@@ -36,6 +36,16 @@
   object-fit: cover;
 }
 
+.clickable-img {
+  cursor: pointer;
+  transition: transform 0.2s;
+}
+
+.clickable-img:hover {
+  transform: scale(1.05);
+}
+
+
 /* ===== Parte inferior ===== */
 .bottom {
   height: 28%;
