--- a/frontend/src/app/Carrinho-compras/carrinho-compras.html
+++ b/frontend/src/app/Carrinho-compras/carrinho-compras.html
@@ -35,7 +35,7 @@
         </div>
 
         <div class="back-to-shop">
-            <a href="/">&leftarrow;
+            <a href="/loja">&leftarrow;
             <span class="text-muted">Voltar para loja</span>
             </a>
         </div>
