--- a/frontend/src/app/Carrinho-compras/carrinho-compras.html
+++ b/frontend/src/app/Carrinho-compras/carrinho-compras.html
@@ -67,7 +67,7 @@
 
         <br>
 
-        <button class="btn">CHECKOUT</button>
+        <button class="btn" [routerLink]="['/confirmarPagamento']">CHECKOUT</button>
 
     </div>
 
