--- a/frontend/src/app/produto-info/produto-info.html
+++ b/frontend/src/app/produto-info/produto-info.html
@@ -1,5 +1,9 @@
 <main>
-  <div class="container">
+  <!-- Spinner -->
+  <div *ngIf="loading" class="loading-spinner">
+    <mat-spinner></mat-spinner>
+  </div>
+  <div  *ngIf="!loading" class="container">
     <div class="grid second-nav">
       <div class="column-xs-12">
         <nav>
