--- a/frontend/src/app/Carrinho-compras/carrinho-compras.scss
+++ b/frontend/src/app/Carrinho-compras/carrinho-compras.scss
@@ -175,3 +175,25 @@
         padding-top: 1rem;
     }
 }
+
+
+
+.spinner-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 200px;
+}
+
+.spinner {
+  border: 4px solid rgba(0,0,0,0.1);
+  border-left-color: #09f;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  to { transform: rotate(360deg); }
+}
