--- a/frontend/src/app/area-adm/produtos/remover-produto/remover-produto.html
+++ b/frontend/src/app/area-adm/produtos/remover-produto/remover-produto.html
@@ -10,9 +10,13 @@
       (input)="filtrarProdutos()">
     <mat-icon matSuffix>search</mat-icon>
   </mat-form-field>
+   <!-- Spinner enquanto carrega os produtos -->
+<div *ngIf="loadingProdutos" class="loading-spinner">
+  <mat-spinner></mat-spinner>
+</div>
 
   <!-- Lista de resultados -->
-  <div class="lista-produtos" *ngIf="produtosFiltrados.length > 0">
+  <div class="lista-produtos" *ngIf="!loadingProdutos && produtosFiltrados.length > 0">
     <div class="produto-item" *ngFor="let produto of produtosFiltrados">
 
       <img [src]="produto.imagemUrl" alt="Imagem" class="produto-img">
