--- a/frontend/src/app/area-adm/produtos/visualizar-produtos/visualizar-produtos.html
+++ b/frontend/src/app/area-adm/produtos/visualizar-produtos/visualizar-produtos.html
@@ -12,8 +12,13 @@
     <mat-icon matSuffix>search</mat-icon>
   </mat-form-field>
 
+     <!-- Spinner enquanto carrega os produtos -->
+<div *ngIf="loadingProdutos" class="loading-spinner">
+  <mat-spinner></mat-spinner>
+</div>
+
   <!-- Lista de produtos filtrados -->
-  <div class="lista-produtos" *ngIf="produtosFiltrados.length > 0">
+  <div class="lista-produtos" *ngIf="!loadingProdutos && produtosFiltrados.length > 0">
     <div class="produto-item" *ngFor="let produto of produtosFiltrados">
 
       <img [src]="produto.imagemUrl" alt="Imagem" class="produto-img">
