Produto-info carrinho
adicionando a função de adicionar no carrinho no info.

--- a/frontend/src/app/produto-info/produto-info.html
+++ b/frontend/src/app/produto-info/produto-info.html
@@ -26,7 +26,7 @@
         <div class="description">
           <p>{{ produto.descricao }}</p>
         </div>
-        <button class="add-to-cart">Adicionar no carrinho</button>
+        <button class="add-to-cart" (click)="adicionarAoCarrinho(produto)">Adicionar no carrinho</button>
       </div>
     </div>
 
