--- a/frontend/src/app/navbar/navbar-publico/navbar-publico.html
+++ b/frontend/src/app/navbar/navbar-publico/navbar-publico.html
@@ -48,7 +48,7 @@
   </div>
 
   <!-- Ícone carrinho -->
-  <button mat-icon-button routerLink="/carrinho">
+  <button mat-icon-button routerLink="cliente/carrinho">
     <mat-icon class="cart">shopping_cart</mat-icon>
   </button>
 
