--- a/frontend/src/app/area-adm/pedidos/visualizar-detalhes-pedido/visualizar-detalhes-pedido.html
+++ b/frontend/src/app/area-adm/pedidos/visualizar-detalhes-pedido/visualizar-detalhes-pedido.html
@@ -3,9 +3,9 @@
   <div class="modal">
     <h3>Detalhes do Pedido #{{ pedido.id }}</h3>
 
-    <p><strong>Cliente:</strong> {{ pedido.clienteId }}</p>
+    <p><strong>Cliente:</strong> {{ pedido.usuario }}</p>
     <p><strong>Status: </strong> <span class="status {{ pedido.status }}">{{ pedido.status }}</span></p>
-    <p><strong>Data:</strong> {{ pedido.data | date:'dd/MM/yyyy HH:mm' }}</p>
+    <p><strong>Data:</strong> {{ pedido.dataPedido | date:'dd/MM/yyyy HH:mm' }}</p>
 
     <h4>Itens do Pedido: </h4>
     <div class="itens-pedido">
@@ -14,13 +14,13 @@
         <div class="info-item">
           <p><strong>Produto:</strong> {{ item.produto.nome }}</p>
           <p><strong>Preço:</strong> R$ {{ item.produto.preco | number:'1.2-2' }}</p>
-          <p><strong>Quantidade Comprada:</strong> {{ item.quantidadeComprada }}</p>
-          <p><strong>Subtotal:</strong> R$ {{ item.produto.preco * item.quantidadeComprada | number:'1.2-2' }}</p>
+          <p><strong>Quantidade Comprada:</strong> {{ item.qtdComprada }}</p>
+          <p><strong>Subtotal:</strong> R$ {{ item.produto.preco * item.qtdComprada | number:'1.2-2' }}</p>
         </div>
       </div>
     </div>
 
-    <h4>Total: R$ {{ pedido.total | number:'1.2-2' }}</h4>
+    <h4>Total: R$ {{ pedido.valorTotal | number:'1.2-2' }}</h4>
 
     <div class="botoes-modal">
       <button mat-button color="primary" (click)="fechar()">Fechar</button>
