--- a/frontend/src/app/Carrinho-compras/carrinho-compras.html
+++ b/frontend/src/app/Carrinho-compras/carrinho-compras.html
@@ -1,7 +1,11 @@
 <div class="cart-wrapper">
 <div class="card">
-<div *ngIf="loading" class="spinner-wrapper">
-  <div class="spinner"></div>
+<div *ngIf="loading" class="loading-spinner">
+  <mat-progress-spinner
+      mode="indeterminate"
+      diameter="50"
+      color="primary">
+  </mat-progress-spinner>
 </div>
 
 <div class="cart" *ngIf="!loading" >
