--- a/frontend/src/app/Carrinho-compras/carrinho-compras.scss
+++ b/frontend/src/app/Carrinho-compras/carrinho-compras.scss
@@ -322,21 +322,16 @@
 
 
 
-//Spinner
-.spinner-wrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 200px;
+.loading-spinner {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 200px;
 }
 
-.spinner {
-  border: 4px solid rgba(0,0,0,0.1);
-  border-left-color: #09f;
-  border-radius: 50%;
-  width: 50px;
-  height: 50px;
-  animation: spin 1s linear infinite;
+::ng-deep mat-progress-spinner circle {
+    stroke: #f28444;
 }
 
 @keyframes spin {
